--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(ex01)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
-set(SOURCE_FILES convexHull.cpp Point.h PointSet.h Point.cpp PointSet.cpp)
+set(SOURCE_FILES ConvexHull.cpp Point.h PointSet.h Point.cpp PointSet.cpp)
 add_executable(ex01 ${SOURCE_FILES})
